--- a/lesson_2/rps_messages.yml
+++ b/lesson_2/rps_messages.yml
@@ -1,7 +1,7 @@
 ---
 welcome: "Welcome to Rock Paper Scissors Lizard Spock!"
-choice: "Please make a choice - 1)Rock 2)Paper 3)Scissors 4)Lizard 5)Spock(q to quit): "
-invalid: "Invalid input, please input 1, 2, or 3"
+choice: "Please make a choice - 1)Rock 2)Paper 3)Scissors 4)Lizard 5)Spock (q to quit): "
+invalid: "Invalid input, please input 1, 2, 3, 4 or 5"
 again?: "Would you like to play again? (Y/N): "
 player_win: "You win! Congratulations :)"
 comp_win: "You lost, better luck next time :("
